@@ -1,3 +1,6 @@
+2004-05-22 Tushar T <tushar@linuxfromscratch.org>
+	* Added winbind script.
+
 2004-05-14 Tushar T <tushar@linuxfromscratch.org>
 	* Added init.d/kerberos script.
 	* Added init.d/usb script.
